--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "apify": "^3.1.10",
-    "crawlee": "^3.14.1",
-    "json2csv": "^6.0.0"
+    "crawlee": "^3.14.1"
   }
 }
